test: add Cucumber and RestAssured API test for jogador, partida and racha